--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!--manifest xmlns:android="http://schemas.android.com/apk/res/android" package="uninotifier.huawei"
-		  android:installLocation="internalOnly" android:versionCode="600101" android:versionName="1.9"-->
+		  android:installLocation="internalOnly" android:versionCode="600102" android:versionName="1.9.2"-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.RD_AAOW.UniNotifier"
-		  android:installLocation="internalOnly" android:versionCode="600101" android:versionName="1.9">
+		  android:installLocation="internalOnly" android:versionCode="600102" android:versionName="1.9.2">
 
-	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="29" />
+	<uses-sdk android:minSdkVersion="17" android:targetSdkVersion="29" />
+	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+	<uses-permission android:name="android.permission.INTERNET" />
 
 	<application android:label="UniNotifier" android:icon="@mipmap/icon">
 
