--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!--manifest xmlns:android="http://schemas.android.com/apk/res/android" package="uninotifier.huawei"
-		  android:installLocation="internalOnly" android:versionCode="600103" android:versionName="1.9.5"-->
+		  android:installLocation="internalOnly" android:versionCode="600104" android:versionName="1.9.6"-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.RD_AAOW.UniNotifier"
-		  android:installLocation="internalOnly" android:versionCode="600103" android:versionName="1.9.5">
+		  android:installLocation="internalOnly" android:versionCode="600104" android:versionName="1.9.6">
 
 	<uses-sdk android:minSdkVersion="17" android:targetSdkVersion="29" />
 	<!--<uses-permission android:name="android.permission.BIND_JOB_SERVICE" />-->
@@ -13,9 +13,9 @@
 
 		<service android:label="UniNotifier" android:icon="@mipmap/icon" android:exported="true"
 			android:name="com.RD_AAOW.UniNotifier">
-			<!--<intent-filter>
-				<action android:name="android.intent.action.BOOT_COMPLETED"></action>
-			</intent-filter>-->
+			<intent-filter>
+				<action android:name="android.intent.action.BOOT_COMPLETED" />
+			</intent-filter>
 		</service>
 
 	</application>
