--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -1,22 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!--manifest xmlns:android="http://schemas.android.com/apk/res/android" package="uninotifier.huawei"
-	android:installLocation="internalOnly" android:versionCode="600108" android:versionName="1.11.2"-->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.RD_AAOW.UniNotifier"
-	android:installLocation="internalOnly" android:versionCode="600108" android:versionName="1.11.2">
+	android:installLocation="internalOnly" android:versionCode="600110" android:versionName="1.12"-->
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.RD_AAOW.UniNotifierDebug"
+	android:installLocation="internalOnly" android:versionCode="600110" android:versionName="1.12">
 
 	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="29" />
+
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-	<!--<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />-->
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
-	<application android:label="UniNotifier" android:icon="@mipmap/icon">
-
-		<service android:label="UniNotifier" android:icon="@mipmap/icon" android:exported="true"
-			android:name="com.RD_AAOW.UniNotifier">
-			<!--intent-filter>
+	<application android:label="UniNotifierDebug" android:icon="@mipmap/icon">
+		<receiver android:name="com.RD_AAOW.UniNotifierBoot" android:label="UniNotifierBoot">
+			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED" />
-			</intent-filter-->
-		</service>
-
+				<action android:name="android.intent.action.QUICKBOOT_POWERON" />
+			</intent-filter>
+		</receiver>
 	</application>
+
 </manifest>
