--- a/.github/workflows/Release.yaml
+++ b/.github/workflows/Release.yaml
@@ -16,7 +16,7 @@ jobs:
 # Константы, используемые далее по тексту
     env:
       PROJ: UniNotifier
-      TAG: 2.5.1
+      TAG: 3.0b
 
     steps:
 # Проверка состава репозитория (без анализа, как может показаться)
