--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!--package="uninotifier.huawei" package="com.RD_AAOW.UniNotifier"-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.RD_AAOW.UniNotifier"
-	android:installLocation="internalOnly" android:versionCode="600216" android:versionName="2.5.1">
+	android:installLocation="internalOnly" android:versionCode="600301" android:versionName="3.0b">
 
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
+	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="30" />
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-	<uses-permission android:name="android.permission.BATTERY_STATS" />
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
 
 	<application android:label="UniNotifier" android:icon="@mipmap/icon">
 		
@@ -16,12 +16,6 @@
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED" />
 				<action android:name="android.intent.action.QUICKBOOT_POWERON" />
-			</intent-filter>
-		</receiver>
-
-		<receiver android:name="com.RD_AAOW.UniNotifierWake" android:label="UniNotifierWake">
-			<intent-filter>
-				<action android:name="android.intent.action.USER_PRESENT" />
 			</intent-filter>
 		</receiver>
 		
