--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!--package="uninotifier.huawei" package="com.RD_AAOW.UniNotifier"-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.RD_AAOW.UniNotifier"
-	android:installLocation="internalOnly" android:versionCode="600312" android:versionName="3.6w">
+	android:installLocation="internalOnly" android:versionCode="600314" android:versionName="3.6z">
 
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
 
