--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!--package="uninotifier.huawei" package="com.RD_AAOW.UniNotifier"-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.RD_AAOW.UniNotifier"
-	android:installLocation="internalOnly" android:versionCode="600319" android:versionName="3.8.2a">
+	android:installLocation="internalOnly" android:versionCode="600320" android:versionName="3.8.4">
 
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
 
