--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!--package="uninotifier.huawei" package="com.RD_AAOW.UniNotifier"-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.RD_AAOW.UniNotifier"
-	android:installLocation="internalOnly" android:versionCode="600416" android:versionName="4.3.6">
+	android:installLocation="internalOnly" android:versionCode="600417" android:versionName="4.4">
 
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
 
@@ -11,7 +11,7 @@
 	<uses-permission android:name="android.permission.BIND_JOB_SERVICE" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 
-	<application android:label="UniNotifier" android:icon="@mipmap/icon">
+	<application android:label="uNot" android:icon="@mipmap/icon">
 
 		<receiver android:name="com.RD_AAOW.UniNotifierBoot" android:label="UniNotifierBoot">
 			<intent-filter>
