--- a/.github/workflows/Release.yaml
+++ b/.github/workflows/Release.yaml
@@ -16,7 +16,7 @@ jobs:
 # Константы, используемые далее по тексту
     env:
       PROJ: UniNotifier
-      TAG: 4.7
+      TAG: 4.7t
 
     steps:
 # Проверка состава репозитория (без анализа, как может показаться)
