--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--package="uninotifier.huawei" package="com.RD_AAOW.UniNotifier"-->
+<!-- uninotifier.huawei -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.RD_AAOW.UniNotifier"
-	android:installLocation="internalOnly" android:versionCode="600443" android:versionName="4.9.2">
+	android:installLocation="internalOnly" android:versionCode="600444" android:versionName="4.9.2">
 
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
 	
