--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!-- uninotifier.huawei -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.RD_AAOW.UniNotifier"
-	android:installLocation="internalOnly" android:versionCode="600465" android:versionName="4.19.2">
+	android:installLocation="internalOnly" android:versionCode="600501" android:versionName="5.0">
 
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
 
@@ -15,7 +15,7 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-	<application android:label="UniNotifier" android:icon="@drawable/launcher_foreground">
+	<application android:label="uNot" android:icon="@drawable/launcher_foreground">
 		<receiver android:name="com.RD_AAOW.UniNotifierBoot" android:label="UniNotifierBoot" android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED" />
